16_subseq/grade.txt
Grading at Mon Oct 28 00:33:16 UTC 2019
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:6:12: error: return makes integer from pointer without a cast [-Werror=int-conversion]
     return NULL;
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
